[gd_scene load_steps=4 format=2]

[ext_resource path="res://tetris_font.tres" type="BitmapFont" id=1]
[ext_resource path="res://Tetris.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameScreen.gd" type="Script" id=3]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 1 )

[node name="Tetris" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 160 )

[node name="HUD" type="Node2D" parent="."]
position = Vector2( 40, 16 )
scale = Vector2( 0.75, 0.75 )

[node name="Level" type="Label" parent="HUD"]
margin_left = 24.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "LEVEL 1"

[node name="Score" type="Label" parent="HUD"]
margin_left = 21.3333
margin_top = 96.0
margin_right = 584.333
margin_bottom = 176.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "SCORE 0"

[node name="GameOver" type="Node2D" parent="HUD"]
visible = false
scale = Vector2( 1.2, 1.2 )

[node name="GameOver" type="Label" parent="HUD/GameOver"]
margin_left = 17.7778
margin_top = 417.778
margin_right = 476.778
margin_bottom = 502.778
custom_colors/font_color = Color( 0.760784, 0.537255, 0.109804, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.27451, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.0627451, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "GAME OVER"
autowrap = true

[connection signal="game_is_over" from="Tetris" to="." method="_on_Tetris_game_is_over"]
[connection signal="lines_destroyed" from="Tetris" to="." method="_on_Tetris_lines_destroyed"]
